Documentado en L5-Swagger post de clientes
